# eyeBMinvaders

./: .gitignore  CLAUDE.md  README.md  benchmark.py  benchmark_results.json  browser_validate.py  compare.html  compare_model.html  explorer_train.py  export_model.py  firebirds.html  game.js  index.html  meta_train.py  play.py  replay.py  serve.py  spaceZ.go  train.py  train_bc.py  train_loop.sh  train_ppo.py  visualize.py  wasm_bridge.js  wasm_game.js
docs/: compare-models.md  learnings.md  training.md
game_sim/: Cargo.toml  pyproject.toml
game_sim/src/: collision.rs  constants.rs  entities.rs  game.rs  lib.rs  movement.rs  spawning.rs  state.rs
game_sim_core/: Cargo.toml
game_sim_core/src/: constants.rs  entities.rs  game.rs  lib.rs  movement.rs  state.rs
headless/: browser-shim.js  dqn_trainer.js  env_worker.js  finetune.py  run.js  train_online.js
models/: model_best.pt  model_ep10000.pt  model_final.pt  model_ppo_best_avg.pt  model_weights.json  training_events.jsonl
models/auto_improve/: iteration_state.json
models/auto_improve/logs/: iteration_2_changes.md  iteration_3_changes.md  iteration_4_changes.md  iteration_5_changes.md  iteration_6_changes.md  iteration_7_changes.md  iteration_9_changes.md
scripts/: auto_improve.sh
vanilla/: game.js  index.html
wasm_agent/: Cargo.toml  build.sh
wasm_agent/pkg/: package.json  wasm_agent.d.ts  wasm_agent.js  wasm_agent_bg.wasm  wasm_agent_bg.wasm.d.ts
wasm_agent/src/: agent.rs  bridge.rs  dqn_online.rs  lib.rs  math.rs  network.rs  rollout.rs
wasm_agent/www/: index_wasm.html
